# edugraph-models

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
prompts/: classify_with_taxonomy_v1.txt
src/edugraph/: ontology_serializer_json.py  ontology_serializer_text.py
src/edugraph/models/classification/: generate_ontology_prompt.py  generate_training_data.py
src/edugraph/models/embeddings/: entity_embeddings_train.py  entity_embeddings_train_old.py
src/imagine/: app.py  config.py  ontology_serializer_json.py  ontology_serializer_text.py
src/imagine/api/: __init__.py  routes.py
src/imagine/legacy/classifiers/strategies/: classifier_split_gemini_with_serialized_taxonomies_v1.py
src/imagine/legacy/embeddings/: embed_files_google.py  embed_images_nomic.py  embedding_builder.py  find_by_image.py
src/imagine/models/classification/: generate_ontology_prompt.py  generate_training_data.py
src/imagine/models/embeddings/: entity_embeddings_infer.py  entity_embeddings_text_train.py  entity_embeddings_train.py  entity_embeddings_train_old.py
src/imagine/semantic/: generate_training_data.py  merge_meta_files.py  ontology_instruction_builder.py  ontology_loader.py  ontology_prompt_builder.py  ontology_serializer_json.py  ontology_serializer_text.py
src/imagine/semantic/classifiers/: context_builder.py
src/imagine/semantic/classifiers/strategies/: classifier_split_gemini_with_serialized_taxonomies_v1.py
src/imagine/semantic/embeddings/: embed_files.py  embed_graph_pyg.py  embed_images_nomic.py  embed_labels.py  embed_taxonomy.py  embedding_builder.py  find_by_image.py  graph_to_label_model.py  inference.py
tests/: entity_mock.py
tests/edugraph/: test_ontology_serializer_json.py  test_ontology_serializer_text.py  test_ontology_util.py
tests/edugraph/models/embeddings/: test_entity_embeddings_e2e.py
tests/imagine/: test_ontology_serializer_json.py  test_ontology_serializer_text.py  test_ontology_util.py
tests/imagine/models/embeddings/: test_entity_embeddings_e2e.py
tests/semantic/: test_classification_cache.py  test_ontology_serializer.py  test_ontology_util.py
tests/semantic/classifiers/: test_context_builder.py
tests/semantic/embeddings/: test_embedding_builder.py
