[project]
name = "imagine"
version = "0.1.0"
description = "Imagine Server"
authors = [{ name = "Christian Bick", email = "christian.bick@bitsuppliers.com" }]
requires-python = "~=3.12"
dependencies = [
    "owlready2>=0.46,<0.47",
    "python-dotenv>=1.0.1,<2",
    "google-genai>=1.27.0",
    "google-cloud-storage>=2.19.0",
    "google-cloud-aiplatform>=1.105.0",
    "transformers>=4.55.2",
    "torch>=2.8.0",
    "pillow>=11.3.0",
    "accelerate>=0.33.0",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest~=8.3",
    "assertpy~=1.1",
]

