[project]
name = "imagine"
version = "0.1.0"
description = "Imagine Server"
authors = [{ name = "Christian Bick", email = "christian.bick@bitsuppliers.com" }]
requires-python = "~=3.12"
dependencies = [
    "owlready2>=0.46,<0.47",
    "python-dotenv>=1.0.1,<2",
    "google-genai>=1.27.0",
    "google-cloud-storage>=2.19.0",
    "google-cloud-aiplatform>=1.105.0",
    "torch>=2.7.0",
    "torchaudio==2.7.0",
    "torchvision>=0.22.0",
    "pillow>=11.3.0",
    "accelerate>=0.33.0",
    "hf-xet>=1.1.7",
    "colpali-engine",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest~=8.3",
    "assertpy~=1.1",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cuda" },
]
torchvision = [
  { index = "pytorch-cuda" },
]
colpali-engine = { git = "https://github.com/illuin-tech/colpali.git" }
